# my-cookiecutter-project-template

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .env  README.md  mkdocs.yml  pyproject.toml  start_{{cookiecutter.project_slug}}.ps1
{{ cookiecutter.repo_name }}/docs/: index.md
{{ cookiecutter.repo_name }}/docs-markdown/: index.md
{{ cookiecutter.repo_name }}/tests/: test_main.py
{{ cookiecutter.repo_name }}/{{cookiecutter.project_slug}}/: __main__.py
